--- a/propertyindex.html
+++ b/propertyindex.html
@@ -18,7 +18,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="propertystyle.css">
 </head>
 <body>
 
@@ -779,6 +779,7 @@
 
     <!-- Scripts -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="script.js"></script>
+    <script src="propertyscript.js"></script>
 </body>
+
 </html>
