--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
 
                 <!-- CIBIL Check Button -->
                 <div style="margin-bottom: 20px;">
-                    <a href="C:\Users\Shubham\Desktop\kk enterprises indore\property\propertyindex.html" target="_blank" class="btn-primary btn-lg cibil-btn">
+                    <a href="propertyindex.html" target="_blank" class="btn-primary btn-lg cibil-btn">
                         <i class="fas fa-check-circle"></i> Check Latest Properties Here
                     </a>
                 </div>
@@ -1418,5 +1418,6 @@
     </script>
 </body>
 </html>
+
 
 
