Update print statement from 'Hello' to 'Goodbye'

--- a/about.html
+++ b/about.html
@@ -517,7 +517,7 @@
             <!-- Team Member 1 - Amrender Kumar -->
             <div class="team-card" data-aos="fade-up">
                 <div class="team-avatar-image">
-                    <img src="owner.png" alt="Akram Khan - Founder & CEO">
+                    <img src="owner.jpg" alt="Akram Khan - Founder & CEO">
                 </div>
                 <h3 class="team-name">Akram Khan</h3>
                 <p class="team-position">Founder & CEO</p>
@@ -764,3 +764,4 @@
     </script>
 </body>
 </html>
+
