--- a/about.html
+++ b/about.html
@@ -376,7 +376,7 @@
                     Empowering Your Dreams with <span class="gradient-text">Tailored Loan Solutions</span>
                 </h1>
                 <p class="hero-subtitle" style="font-size: 20px; max-width: 800px; margin: 0 auto;">
-                    Founded in 2024 with 10+ years of expertise • 50+ banking partnerships • Thousands of happy customers
+                    Founded in 2010 with 15+ years of expertise • 50+ banking partnerships • Thousands of happy customers
                 </p>
             </div>
         </div>
@@ -473,8 +473,8 @@
                 <!-- Milestone 1 -->
                 <div class="timeline-item" data-aos="fade-right">
                     <div class="timeline-content">
-                        <span class="timeline-year">2024</span>
-                        <h3 style="font-size: 22px; font-weight: 700; margin-bottom: 12px; color: var(--primary-dark);">Establishment of KK EnterprisesConsultancy</h3>
+                        <span class="timeline-year">2010</span>
+                        <h3 style="font-size: 22px; font-weight: 700; margin-bottom: 12px; color: var(--primary-dark);">Establishment of KK Enterprises</h3>
                         <p style="color: var(--dark-gray); line-height: 1.7;">Founded with a vision to simplify loan processes and provide expert advice to individuals and businesses alike. Initially focused on all types of loan consulting and expanded to include business financing solutions.</p>
                     </div>
                     <div class="timeline-dot"></div>
@@ -483,7 +483,7 @@
                 <!-- Milestone 2 -->
                 <div class="timeline-item" data-aos="fade-left">
                     <div class="timeline-content">
-                        <span class="timeline-year">2024</span>
+                        <span class="timeline-year">2015</span>
                         <h3 style="font-size: 22px; font-weight: 700; margin-bottom: 12px; color: var(--primary-dark);">Major Retail Chain Partnership</h3>
                         <p style="color: var(--dark-gray); line-height: 1.7;">Successfully onboarded a leading retail chain, providing business loan consultancy for its expansion into new markets. Facilitated a significant loan package that helped the company scale operations.</p>
                     </div>
@@ -764,5 +764,6 @@
     </script>
 </body>
 </html>
+
 
 
