Update stylesheet and script references in HTML

--- a/property-detail.html
+++ b/property-detail.html
@@ -16,7 +16,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="propertystyle.css">
 
     <style>
         /* Additional styles for property detail page */
@@ -1220,6 +1220,6 @@
 
     <!-- Scripts -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script src="script.js"></script>
+    <script src="propertyscript.js"></script>
 </body>
 </html>
