--- a/propertyindex.html
+++ b/propertyindex.html
@@ -33,7 +33,7 @@
     <!-- Header -->
     <header class="header" id="header">
         <div class="header-container">
-            <a href="index.html" class="logo">
+            <a href="propertyindex.html" class="logo">
                 <div class="logo-icon">KK</div>
                 <div class="logo-text">
                     <div class="logo-name">KK Enterprises</div>
@@ -42,11 +42,11 @@
             </a>
 
             <nav class="nav-menu" id="navMenu">
-                <a href="#home" class="nav-link active">Home</a>
-                <a href="#properties" class="nav-link">Properties</a>
-                <a href="#services" class="nav-link">Services</a>
-                <a href="#about" class="nav-link">About</a>
-                <a href="#contact" class="nav-link">Contact</a>
+                <a href="propertyindex.html#home" class="nav-link active">Home</a>
+                <a href="propertyindex.html#properties" class="nav-link">Properties</a>
+                <a href="propertyindex.html#services" class="nav-link">Services</a>
+                <a href="propertyindex.html#about" class="nav-link">About</a>
+                <a href="propertyindex.html#contact" class="nav-link">Contact</a>
             </nav>
 
             <div class="header-actions">
@@ -783,3 +783,4 @@
 </body>
 
 </html>
+
